fix warnings